[tool.poetry]
name = "sora"
version = "0.1.0"
description = ""
authors = ["Alex Jiang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llvmlite = "^0.43.0"
numba = "^0.60.0"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
